using System.Text.Json;
using System.Text.Json.Serialization;

namespace MojiGotchi;

class Level
{
	public LevelLayer[] Layers { get; private set; }
	public static readonly string[] LayerNames = { "Bottom", "Mid", "Top" };

	private Vec2 _size;
	public Vec2 Size => _size;

	private Vec2 _relativeCenter;
	public Vec2 RelativeCenter => _relativeCenter;

	public Level()
	{
		Layers = new LevelLayer[3];
		_size = new Vec2(0, 0);
		_relativeCenter = new Vec2(0, 0);
	}

	public void SetCell(string? key, Vec2 pos, int depth = -1)
	{
		// Default to ".." for null keys to maintain grid alignment
		LevelElement? element = BlueprintManager.GetElement(key ?? "..", pos);
		int layerIndex = depth == -1 ? 0 : Math.Clamp(depth, 0, Layers.Length - 1);
		
		if (pos.X >= 0 && pos.X < _size.X && pos.Y >= 0 && pos.Y < _size.Y)
		{
			Layers[layerIndex].Elements[pos.X, pos.Y] = element;
		}
	}

	public void LoadFromFile(string filePath)
	{
		try
		{
			if (!File.Exists(filePath))
			{
				DebugLogger.Log($"Level file not found! ({filePath})");
				CreateNewLevel(100, 40);
				return;
			}

			string json = File.ReadAllText(filePath);
			var context = new LevelJsonContext();
			var dto = JsonSerializer.Deserialize<LevelDataDto>(json, context.LevelDataDto);
			if (dto == null) return;

			_size = new Vec2(dto.Width, dto.Height);
			_relativeCenter = _size.Divide(2);
			
			for (int i = 0; i < Layers.Length; i++)
			{
				Layers[i] = new LevelLayer(LayerNames[i], i, _size);
			}

			foreach (var layerDto in dto.Layers)
			{
				int layerIndex = Array.IndexOf(LayerNames, layerDto.Name);
				if (layerIndex == -1) continue;

				for (int y = 0; y < Math.Min(layerDto.Data.Count, _size.Y); y++)
				{
					string row = layerDto.Data[y];
					for (int x = 0; x < _size.X; x++)
					{
						int charIndex = x * 2;
						if (charIndex + 1 >= row.Length) break;

						string cell = row.Substring(charIndex, 2);
						if (cell != "..")
						{
							SetCell(cell, new Vec2(x, y), layerIndex);
						}
					}
				}
			}

			foreach (var layer in Layers) layer.UpdateSprite();
			DebugLogger.Log($"Loaded level: {filePath}");
		}
		catch (Exception ex)
		{
			DebugLogger.Log($"Error loading level: {ex.Message}");
		}
	}

	public bool SaveToFile(string filePath)
	{
		try
		{
			string? directory = Path.GetDirectoryName(filePath);
			if (!string.IsNullOrEmpty(directory)) Directory.CreateDirectory(directory);

			var jsonBuilder = new System.Text.StringBuilder();
			jsonBuilder.AppendLine("{");
			jsonBuilder.AppendLine($"  \"width\": {Size.X},");
			jsonBuilder.AppendLine($"  \"height\": {Size.Y},");
			jsonBuilder.AppendLine("  \"layers\": [");

			for (int i = 0; i < Layers.Length; i++)
			{
				LevelLayer layer = Layers[i];
				jsonBuilder.AppendLine("    {");
				jsonBuilder.AppendLine($"      \"name\": \"{layer.LayerName}\",");
				jsonBuilder.AppendLine("      \"data\": [");

				for (int y = 0; y < Size.Y; y++)
				{
					var rowBuilder = new System.Text.StringBuilder();
					for (int x = 0; x < Size.X; x++)
					{
						// Alignment Check: Always use 2 characters
						LevelElement? element = layer.Elements[x, y];
						rowBuilder.Append(element?.Key ?? "..");
					}
					jsonBuilder.AppendLine($"        \"{rowBuilder}\"{(y < Size.Y - 1 ? "," : "")}");
				}
				jsonBuilder.AppendLine("      ]");
				jsonBuilder.AppendLine($"    }}{(i < Layers.Length - 1 ? "," : "")}");
			}

			jsonBuilder.AppendLine("  ]");
			jsonBuilder.AppendLine("}");

			File.WriteAllText(filePath, jsonBuilder.ToString());
			return true;
		}
		catch (Exception ex)
		{
			DebugLogger.Log($"Error saving level: {ex.Message}");
			return false;
		}
	}

	public void CreateNewLevel(int width, int height)
	{
		_size = new Vec2(width, height);
		_relativeCenter = _size.Divide(2);
		Layers = new LevelLayer[3];
		for (int i = 0; i < Layers.Length; i++)
		{
			Layers[i] = new LevelLayer(LayerNames[i], i, _size);
		}
	}

	public void Resize(int newWidth, int newHeight)
	{
		const int min = 32;
		const int max = 512;

		newWidth = Math.Clamp(newWidth, min, max);
		newHeight = Math.Clamp(newHeight, min, max);

		Vec2 newSize = new Vec2(newWidth, newHeight);

		// Calculate offsets to center existing content
		int offsetX = (newWidth - _size.X) / 2;
		int offsetY = (newHeight - _size.Y) / 2;

		for (int i = 0; i < Layers.Length; i++)
		{
			LevelLayer oldLayer = Layers[i];
			var newElements = new LevelElement?[newSize.X, newSize.Y];

			for (int y = 0; y < newSize.Y; y++)
			{
				for (int x = 0; x < newSize.X; x++)
				{
					// Map new grid coordinates back to old grid coordinates using offsets
					int oldX = x - offsetX;
					int oldY = y - offsetY;

					// If the mapped coordinates fall within the old level boundaries, copy the element
					if (oldX >= 0 && oldX < _size.X && oldY >= 0 && oldY < _size.Y)
					{
						newElements[x, y] = oldLayer.Elements[oldX, oldY];
						if (newElements[x, y] != null)
						{
							newElements[x, y]!.Pos = new Vec2(x, y);
						}
					}
				}
			}

			oldLayer.Elements = newElements;
			oldLayer.UpdateSprite();
		}

		_size = newSize;
		_relativeCenter = _size.Divide(2);

		DebugLogger.Log($"Resized level to {newWidth}x{newHeight} (Centered with offsets: {offsetX}, {offsetY})");
	}

	public void PadLevel(int borderh, int borderv)
	{
		Vec2 newSize = new Vec2(_size.X + (borderh * 2), _size.Y + (borderv * 2));
		
		for (int i = 0; i < Layers.Length; i++)
		{
			LevelLayer oldLayer = Layers[i];
			var newElements = new LevelElement?[newSize.X, newSize.Y];
			for (int y = 0; y < newSize.Y; y++)
			{
				for (int x = 0; x < newSize.X; x++)
				{
					int oldX = x - borderh;
					int oldY = y - borderv;

					if (oldX >= 0 && oldX < _size.X && oldY >= 0 && oldY < _size.Y)
					{
						newElements[x, y] = oldLayer.Elements[oldX, oldY];
						if (newElements[x, y] != null) newElements[x, y]!.Pos = new Vec2(x, y);
					}
					else if (i == 1) // Only pad the middle layer with terrain
					{
						string padKey = Randomizer.R().Next(10) > 0 ? "BB" : ",,";
						newElements[x, y] = BlueprintManager.GetElement(padKey, new Vec2(x, y));
					}
				}
			}
			oldLayer.Elements = newElements;
			oldLayer.UpdateSize(newSize);
			oldLayer.UpdateSprite();
		}

		_size = newSize;
		_relativeCenter = _size.Divide(2);
	}
}

public class LevelLayer
{
	public LevelElement?[,] Elements { get; set; }
	public string LayerName { get; private set; }
	public Sprite? Sprite { get; private set; }
	public int Depth { get; private set; }
	public Vec2 Size { get; private set; }

	public LevelLayer(string layername, int depth, Vec2 size)
	{
		Elements = new LevelElement[size.X, size.Y];
		LayerName = layername;
		Depth = depth;
		Size = size;
		Sprite = null;
	}

	public void UpdateSprite(float shade = 0.0f)
	{
		Sprite targetsprite = new Sprite(new Vec2(Elements.GetLength(0), Elements.GetLength(1)));

		foreach (var element in Elements)
		{
			if (element == null) continue;
			Sprite? elementSprite = element.GetSprite();

			if (elementSprite != null)
			{
				Vec2 elementPos = element.Pos;
				for (int y = 0; y < elementSprite.Size.Y; y++)
				{
					for (int x = 0; x < elementSprite.Size.X; x++)
					{
						int targetX = elementPos.X + x;
						int targetY = elementPos.Y + y;

						ScreenCell cell = elementSprite.Data[y, x];
						if (shade > 0)
						{
							cell.BgColor = Color.Mix(cell.BgColor, Color.Black, shade);
							cell.Color = Color.Mix(cell.Color, Color.Black, shade);
						}
						targetsprite.WriteCell(new Vec2(targetX, targetY), cell);
					}
				}
			}
		}
		Sprite = targetsprite;
	}

	public void UpdateSize(Vec2 size)
	{
		Size = size;
	}
}

public class LevelElement : Entity
{
	public bool IsBlocking { get; set; }
	public string Key { get; private set; }

	public LevelElement(string key = "..", bool blocking = false) : base()
	{
		IsBlocking = blocking;
		Key = key;
	}
}

internal class LevelDataDto
{
	[JsonPropertyName("width")] public int Width { get; set; }
	[JsonPropertyName("height")] public int Height { get; set; }
	[JsonPropertyName("layers")] public List<LayerDataDto> Layers { get; set; } = new();
}

internal class LayerDataDto
{
	[JsonPropertyName("name")] public string Name { get; set; } = string.Empty;
	[JsonPropertyName("data")] public List<string> Data { get; set; } = new();
}