@startuml
class Level {
    + Level()
    + SetCell(key:string?, pos:Vec2, depth:int) : void
    + LoadFromFile(filePath:string) : void
    + SaveToFile(filePath:string) : bool
    + CreateNewLevel(width:int, height:int) : void
    + Resize(newWidth:int, newHeight:int) : void
    + PadLevel(borderh:int, borderv:int) : void
}
class LevelLayer {
    + LayerName : string <<get>>
    + Depth : int <<get>>
    + LevelLayer(layername:string, depth:int, size:Vec2)
    + UpdateSprite(shade:float) : void
    + UpdateSize(size:Vec2) : void
}
class LevelElement {
    + IsBlocking : bool <<get>> <<set>>
    + Key : string <<get>>
    + LevelElement(key:string, blocking:bool)
}
class LevelDataDto {
    + Width : int <<get>> <<set>>
    + Height : int <<get>> <<set>>
}
class LayerDataDto {
    + Name : string <<get>> <<set>>
}
class "List`1"<T> {
}
Level --> "Size" Vec2
Level --> "RelativeCenter" Vec2
LevelLayer --> "Sprite" Sprite
LevelLayer --> "Size" Vec2
Entity <|-- LevelElement
LevelDataDto o-> "Layers<LayerDataDto>" "List`1"
LayerDataDto o-> "Data<string>" "List`1"
@enduml
